dc-chatbot/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dec112-chatbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatbot
  template:
    metadata:
      labels:
        app: chatbot
    spec:
      containers:
      - name: chatbot
        image: oydeu/dc-chatbot
        ports:
        - containerPort: 3000
