dc-chatbot/kubernetes/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: chatbot
spec:
  selector:
    app: chatbot
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
