dc-chatbot/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatbot
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - xxx
    secretName: chatbot-tls
  rules:
  - host: xxx
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: chatbot
            port:
              number: 80
